--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-    "name": "september",
+    "name": "real-time-location",
     "version": "1.0.0",
-    "description": "",
+    "description": "Realtime device tracking with Node.js, Socket.IO, and Leaflet",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
-    "keywords": [],
-    "author": "",
+    "keywords": [
+        "realtime",
+        "tracking",
+        "socket.io",
+        "leaflet",
+        "nodejs"
+    ],
+    "author": "Md. Appon Islam",
     "license": "ISC",
     "type": "module",
     "dependencies": {
